--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="caixa-alternativas"></div>
     <div class="caixa-resultado"></div>
        <p class="texto-resultado"></p>
-       <button class="novamente-btn"></button>
+       <button class="novamente-btn"> Jogar Novamente</button>
     
    </div> 
     <script type="module" src="js/aleatorio.js"></script>
@@ -22,6 +22,10 @@
 
 </body>
 </html>
+
+
+
+
 
 
 
