--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
    <div class="caixa-principal">
     <h1>Você decide seu futuro</h1>
+    <div class="tela-inicial">
+        <p>Desde os tempos antigos a nossa educação 'alvo de discussãoem varios senarios.</p>
+        <button class=" iniciar-btn"></button>
+    </div>
     <div class="caixa-perguntas"></div>
     <div class="caixa-alternativas"></div>
     <div class="caixa-resultado"></div>
@@ -22,6 +26,18 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
