--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="style.css">
 
     <script  src="js/aleatorio.js" defer></script>
-    <script  src="js/perguntas.js" defer></script>
+    <!-- <script  src="js/perguntas.js" defer></script> -->
+    <script  src="js/perg_test.js" defer></script>
+
     <script  src="js/script.js" defer></script>
 
     <title>Document</title>
@@ -21,11 +23,11 @@
             Em meio a esse caos de identidade, uma missão surgiu. 
             Nosso objetivo: explorar o impacto da Inteligência Artificial (IA) em nossas vidas e confrontar as possibilidades que o futuro nos reserva. 
             O mundo nunca mais será o mesmo.</p>
-        <button class=" iniciar-btn">Iniciar</button>
+        <button class="iniciar-btn">Iniciar</button>
     </div>
     <div class="caixa-perguntas"></div>
     <div class="caixa-alternativas"></div>
-    <div class="caixa-resultado"></div>
+    <div class="caixa-resultado">
        <p class="texto-resultado"></p>
        <button class="novamente-btn">Jogar Novamente</button>
     
